Fixed alignment of top of board to sidebar.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -216,7 +216,7 @@ body #content #about {
 }
 /* line 76, ../src/screen.sass */
 body #content #board-container {
-  margin: 10px 0 8px 10px;
+  margin: 3px 0 8px 10px;
   padding: 9px;
   background-color: #eeeeee;
   border: 1px solid #888888;
